UF-18131: update to dept44 8.0.0 and SB4
